--- a/index.html
+++ b/index.html
@@ -8,18 +8,33 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;500;700&family=JetBrains+Mono:wght@400;700&family=Oswald:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Inter:wght@400;500;700&family=Permanent+Marker&display=swap" rel="stylesheet">
     <style>
       /* Apply custom fonts via CSS since Tailwind CDN doesn't support theme extension */
       body {
         font-family: 'Inter', sans-serif;
-        background-color: #0B0B0C;
+        background-color: #0d0d0d;
         color: #F5F7FA;
+        overflow-x: hidden;
       }
-      .font-display { font-family: 'Bebas Neue', cursive; }
-      .font-accent { font-family: 'Oswald', sans-serif; }
+      .font-display { font-family: 'Bangers', cursive; }
+      .font-accent { font-family: 'Permanent Marker', cursive; }
       .font-code { font-family: 'JetBrains Mono', monospace; }
       .font-body { font-family: 'Inter', sans-serif; }
+
+      /* Comic book dot texture overlay */
+      body::after {
+        content: "";
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-image: radial-gradient(circle at 1px 1px, rgba(255,255,255,0.1) 1px, transparent 0);
+        background-size: 8px 8px;
+        pointer-events: none;
+        z-index: 9999;
+      }
 
       /* Custom scrollbar for a modern look */
       ::-webkit-scrollbar {
@@ -33,13 +48,13 @@
         border-radius: 4px;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #E50914;
+        background: #e63946;
       }
 
       /* Custom style for the article drop cap */
       .article-body p:first-of-type::first-letter {
-        font-family: 'Bebas Neue', cursive;
-        color: #E50914;
+        font-family: 'Bangers', cursive;
+        color: #e63946;
         font-size: 4.5rem; /* 72px */
         line-height: 0.8;
         float: left;
@@ -47,6 +62,48 @@
         font-weight: 400;
         padding-top: 0.5rem; /* 8px */
       }
+      
+      /* Navigation speech bubble style */
+      .nav-bubble {
+        position: relative;
+        padding: 6px 20px;
+        border: 3px solid #F5F7FA;
+        border-radius: 30px;
+        font-family: 'Permanent Marker', cursive;
+        color: #F5F7FA;
+        text-transform: uppercase;
+        transition: all 0.2s ease-in-out;
+        background: rgba(0,0,0,0.2);
+        letter-spacing: 1px;
+      }
+      .nav-bubble:after {
+        content: '';
+        position: absolute;
+        bottom: -12px;
+        left: 50%;
+        transform: translateX(-50%);
+        border-width: 12px 12px 0;
+        border-style: solid;
+        border-color: #F5F7FA transparent transparent transparent;
+        transition: all 0.2s ease-in-out;
+      }
+      .nav-bubble.active {
+        background-color: #e63946;
+        border-color: #e63946;
+        color: #F5F7FA;
+      }
+      .nav-bubble.active:after {
+        border-top-color: #e63946;
+      }
+      .nav-bubble:not(.active):hover {
+        background-color: #f1faee;
+        border-color: #f1faee;
+        color: #1d3557;
+      }
+      .nav-bubble:not(.active):hover:after {
+        border-top-color: #f1faee;
+      }
+
     </style>
   <script type="importmap">
 {
