feat: Update project dependencies and configuration
This commit updates the project's dependencies to their latest compatible versions. It also refactors the Vite configuration to remove unnecessary environment variable loading and path aliases, simplifying the build setup. The project name in `package.json` has been updated to "portfolio-app". TypeScript configuration has also been refined for better type checking and module resolution.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" class="dark">
   <head>
@@ -120,7 +119,9 @@
     "@react-three/fiber": "https://esm.sh/@react-three/fiber@8.15.16?deps=three@0.160.0,react@18.2.0,react-dom@18.2.0",
     "@react-three/drei": "https://esm.sh/@react-three/drei@9.99.0?deps=three@0.160.0,react@18.2.0,react-dom@18.2.0,@react-three/fiber@8.15.16",
     "maath": "https://esm.sh/maath@0.10.7?deps=three@0.160.0,react@18.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
+    "vite": "https://aistudiocdn.com/vite@^7.2.6"
   }
 }
 </script>
